...
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="mgq-zt-OqX">
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                                <subviews>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOl-Lx-Vk2">
                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                                        <subviews>
                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Me" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
                                                                <rect key="frame" x="182.5" y="3.5" width="49.5" height="43"/>
                                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
...
                            <constraint firstItem="sU3-rw-dqH" firstAttribute="top" secondItem="K0g-oT-I86" secondAttribute="bottom" constant="-50" id="Vv7-dQ-3v5"/>
                            <constraint firstItem="sU3-rw-dqH" firstAttribute="top" secondItem="0Z3-N3-fJ2" secondAttribute="bottom" constant="10" id="XBg-vX-shu"/>
                            <constraint firstItem="K0g-oT-I86" firstAttribute="trailing" secondItem="0Z3-N3-fJ2" secondAttribute="trailing" id="ukm-32-YaX"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="K0g-oT-I86"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Projects" image="Triangle" id="lXr-iH-vX9"/>
                    <connections>
                        <outlet property="pageControl" destination="sU3-rw-dqH" id="GlV-P4-BZr"/>
                        <outlet property="projectsScrollView" destination="0Z3-N3-fJ2" id="iES-Ja-L6c"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hm5-49-1QG" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
            <point key="canvasLocation" x="0.0" y="0.0"/>
        </scene>
        <!--Work-->
        <scene sceneID="f9J-fp-5tG">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GFC-aU-Dcm" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Work" image="first" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9DX-uE-hqW">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
